--- a/public/playlist.html
+++ b/public/playlist.html
@@ -8,34 +8,32 @@
   <link id="favicon" rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90' fill='white'>☼</text></svg>">
 
   <!-- css -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="stylesheet" href="font.css">
   <link rel="stylesheet" href="playlist.css">
 </head>
 
 <body>
-  <h1>Search and Add to Shared Playlist</h1>
+  <h1>Sol–Ra.dio</h1>
   <input type="text" id="searchInput" placeholder="Enter song name" />
-  <button id="searchBtn">Search</button>
+  <button id="searchBtn"><span class="material-symbols-outlined">search</span></button>
   <div id="result"></div>
 
-  <div id="printable">
+  <!-- <div id="printable">
     <h3>🎉 Shared Playlist</h3>
     <ul>
       <li>01. Song Title - Artist</li>
       <li>02. Another Song - Artist</li>
-      <!-- 추가 항목 -->
     </ul>
   </div>
+  <button onclick="printToThermalPrinter()">🖨️ 프린트</button> -->
 
-  <button onclick="printToThermalPrinter()">🖨️ 프린트</button>
 
-
-  <h2>🎵 Shared Playlist Tracks</h2>
-  <a href="/login" id="loginBtn">Spotify 로그인</a>
-  <button id="playAllBtn">전체 재생</button>
-  <button id="pauseBtn">일시 중지</button>
-  <button id="stopBtn">중지</button>
+  <a href="/login"><button id="loginBtn"><span class="material-symbols-outlined">refresh</span></button></a>
+  
+  <button id="playAllBtn"><span class="material-symbols-outlined">play_arrow</span></button>
+  <button id="pauseBtn"><span class="material-symbols-outlined">pause</span></button>
+  <button id="stopBtn"><span class="material-symbols-outlined">stop</span></button>
   <div id="playlistContainer"></div>
 
   <!-- ====================================================== -->
@@ -44,7 +42,7 @@
   <script src="https://sdk.scdn.co/spotify-player.js"></script>
   <script src="playlist.js"></script>
 
-  <script>
+  <!-- <script>
     async function printToThermalPrinter() {
       const text = extractPrintableText();
       const encoder = new TextEncoder();
@@ -82,7 +80,7 @@
       text = text.replace(/\n+/g, "\n"); // 줄바꿈 정리
       return text.trim();
     }
-    </script>
+    </script> -->
 
 </body>
 </html>
