--- a/public/playlist.html
+++ b/public/playlist.html
@@ -32,8 +32,8 @@
   <a href="/login"><button id="loginBtn"><span class="material-symbols-outlined">refresh</span></button></a>
   
   <button id="playAllBtn"><span class="material-symbols-outlined">play_arrow</span></button>
-  <button id="pauseBtn"><span class="material-symbols-outlined">pause</span></button>
-  <button id="stopBtn"><span class="material-symbols-outlined">stop</span></button>
+  <!-- <button id="pauseBtn"><span class="material-symbols-outlined">pause</span></button>
+  <button id="stopBtn"><span class="material-symbols-outlined">stop</span></button> -->
   <div id="playlistContainer"></div>
 
   <!-- ====================================================== -->
