--- a/public/tv.html
+++ b/public/tv.html
@@ -80,7 +80,10 @@ function printTarget() {
       <head>
         <title>Print Preview</title>
         <style>
-          body { font-family: Arial, sans-serif; padding: 20px; }
+          html,body { 
+            margin: 0;
+            padding: 0;
+          }
           img {
             width: 100%;
           }
