--- a/public/tv.html
+++ b/public/tv.html
@@ -105,7 +105,7 @@ function printTarget() {
             window.print();
             // 사용자가 인쇄 완료 후 창을 직접 닫도록 안내 (팝업 자동 닫기 대신)
             // 또는 아래 주석 해제 시 1초 후 자동 닫기 시도 가능
-            setTimeout(() => window.close(), 1000);
+            // setTimeout(() => window.close(), 1000);
           };
         <\/script>
       </body>
