--- a/public/tv.html
+++ b/public/tv.html
@@ -98,7 +98,7 @@ function printTarget() {
       <body>
         ${target.outerHTML}
         <script>
-          function applyDotDither(imgElement) {
+          function applyFloydSteinbergDithering(imgElement) {
             const canvas = document.createElement('canvas');
             const ctx = canvas.getContext('2d');
             const img = new Image();
@@ -106,33 +106,48 @@ function printTarget() {
             img.src = imgElement.src;
 
             img.onload = function () {
-              const scale = 5;
               const width = img.width;
               const height = img.height;
               canvas.width = width;
               canvas.height = height;
-
               ctx.drawImage(img, 0, 0, width, height);
               const imageData = ctx.getImageData(0, 0, width, height);
               const data = imageData.data;
 
-              ctx.clearRect(0, 0, width, height);
-              ctx.fillStyle = "black";
+              // Convert to grayscale
+              const gray = new Array(width * height);
+              for (let i = 0; i < data.length; i += 4) {
+                const avg = 0.299 * data[i] + 0.587 * data[i + 1] + 0.114 * data[i + 2];
+                gray[i / 4] = avg;
+              }
 
-              for (let y = 0; y < height; y += scale) {
-                for (let x = 0; x < width; x += scale) {
-                  const index = (y * width + x) * 4;
-                  const r = data[index];
-                  const g = data[index + 1];
-                  const b = data[index + 2];
-                  const brightness = 0.299 * r + 0.587 * g + 0.114 * b;
-                  const radius = (1 - brightness / 255) * (scale / 2);
+              // Floyd–Steinberg dithering
+              for (let y = 0; y < height; y++) {
+                for (let x = 0; x < width; x++) {
+                  const i = y * width + x;
+                  const oldPixel = gray[i];
+                  const newPixel = oldPixel < 128 ? 0 : 255;
+                  const quantError = oldPixel - newPixel;
+                  gray[i] = newPixel;
 
-                  ctx.beginPath();
-                  ctx.arc(x, y, radius, 0, Math.PI * 2);
-                  ctx.fill();
+                  if (x + 1 < width)
+                    gray[i + 1] += quantError * 7 / 16;
+                  if (x - 1 >= 0 && y + 1 < height)
+                    gray[i + width - 1] += quantError * 3 / 16;
+                  if (y + 1 < height)
+                    gray[i + width] += quantError * 5 / 16;
+                  if (x + 1 < width && y + 1 < height)
+                    gray[i + width + 1] += quantError * 1 / 16;
                 }
               }
+
+              // Set image data
+              for (let i = 0; i < data.length; i += 4) {
+                const val = gray[i / 4] < 128 ? 0 : 255;
+                data[i] = data[i + 1] = data[i + 2] = val;
+              }
+
+              ctx.putImageData(imageData, 0, 0);
 
               const newImg = new Image();
               newImg.src = canvas.toDataURL();
@@ -151,7 +166,7 @@ function printTarget() {
 
             let processedCount = 0;
             images.forEach((img) => {
-              applyDotDither(img);
+              applyFloydSteinbergDithering(img);
               img.onload = () => {
                 processedCount++;
                 if (processedCount === images.length) {
