--- a/public/tv.html
+++ b/public/tv.html
@@ -101,6 +101,9 @@ function printTarget() {
           .noise {
             display: none;
           }
+          .Block_title {
+            display: none;
+          }
         </style>
       </head>
       <body>
