--- a/public/tv.html
+++ b/public/tv.html
@@ -95,12 +95,12 @@ function printTarget() {
             background: white;
           }
           #targetArea img {
-            width: 384px; /* 58mm 감열지용 */
-          }
-          .noise {
-            display: none;
+            width: 384px;
           }
           .Block_title {
+            display: none;
+          }
+          .noise { 
             display: none;
           }
         </style>
@@ -108,7 +108,7 @@ function printTarget() {
       <body>
         ${targetHTML}
         <script>
-          function applyFloydSteinberg(img) {
+          function applyFloydSteinberg(img, callback) {
             const canvas = document.createElement('canvas');
             const ctx = canvas.getContext('2d');
             const clone = new Image();
@@ -119,7 +119,6 @@ function printTarget() {
               const scale = 384 / clone.width;
               const w = 384;
               const h = Math.floor(clone.height * scale);
-
               canvas.width = w;
               canvas.height = h;
               ctx.drawImage(clone, 0, 0, w, h);
@@ -127,7 +126,6 @@ function printTarget() {
               const imgData = ctx.getImageData(0, 0, w, h);
               const data = imgData.data;
               const gray = new Array(w * h);
-
               for (let i = 0; i < data.length; i += 4) {
                 const avg = 0.3 * data[i] + 0.59 * data[i + 1] + 0.11 * data[i + 2];
                 gray[i / 4] = avg;
@@ -154,43 +152,48 @@ function printTarget() {
               }
 
               ctx.putImageData(imgData, 0, 0);
+
               const finalImg = new Image();
               finalImg.src = canvas.toDataURL();
               finalImg.onload = () => {
                 img.replaceWith(finalImg);
+                callback(); // 디더링된 이미지가 로드 완료됐을 때 호출
               };
             };
           }
 
           window.onload = function () {
             const imgs = document.querySelectorAll('#targetArea img');
-            let processed = 0;
+            if (imgs.length === 0) {
+              window.print();
+              setTimeout(() => window.close(), 500);
+              return;
+            }
+
+            let loadedCount = 0;
+            const total = imgs.length;
+
             imgs.forEach((img) => {
-              applyFloydSteinberg(img);
-              img.onload = () => {
-                processed++;
-                if (processed === imgs.length) {
+              applyFloydSteinberg(img, () => {
+                loadedCount++;
+                if (loadedCount === total) {
                   setTimeout(() => {
                     window.print();
                     setTimeout(() => window.close(), 500);
-                  }, 300);
+                  }, 500); // 약간의 렌더링 대기시간 추가
                 }
-              };
+              });
             });
-
-            // 이미지가 없을 경우 즉시 프린트
-            if (imgs.length === 2) {
-              window.print();
-              setTimeout(() => window.close(), 500);
-            }
           };
         <\/script>
       </body>
     </html>
   `);
+
   printWindow.document.close();
 }
 </script>
+
 
 
 
