--- a/public/tv.html
+++ b/public/tv.html
@@ -29,7 +29,7 @@
       }
     }
     #targetArea img {
-      max-width: 100%;
+      width: 100%;
     }
   </style>
 </head>
@@ -95,7 +95,7 @@ function printTarget() {
             background: white;
           }
           #targetArea img {
-            width: 384px;
+            width: 100%;
           }
           .Block_title {
             display: none;
