--- a/public/tv.html
+++ b/public/tv.html
@@ -28,6 +28,14 @@
       .noise {
         display: none;
       }
+      .ARENA-container {
+        top: 0;
+        left: 50%;
+        transform: translate(-50%, 0);
+        width: 100%;
+        height: auto;
+        background-image: none;
+      }
     }
   </style>
 </head>
