--- a/public/tv.html
+++ b/public/tv.html
@@ -42,11 +42,18 @@
       }
       .ARENA-container {
         top: 0;
-        left: 50%;
-        transform: translate(-50%, 0);
-        width: 384px;
+        left: 0;
+        transform: translate(0, 0);
+        width: 100%;
         height: auto;
         background-image: none;
+      }
+      #targetArea {
+        position: static !important;
+        margin: 0 auto;
+        width: 100%;
+        max-width: 384px;
+        overflow: hidden;
       }
     }
   </style>
