--- a/public/tv.html
+++ b/public/tv.html
@@ -17,6 +17,8 @@
   <style>
     @media print {
       html, body {
+        margin: 0;
+        padding: 0;
         width: auto;
         height: auto;
         overflow: hidden;
