--- a/public/tv.html
+++ b/public/tv.html
@@ -38,6 +38,9 @@
       .noise {
         display: none;
       }
+      .Block_description {
+        display: none;
+      }
       #targetArea, #targetArea * {
         display: block !important;
         visibility: visible !important;
