--- a/public/tv.html
+++ b/public/tv.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="font.css">
   <link rel="stylesheet" href="tv.css">
   <style>
-
+    @media print {
       html, body {
         margin: 0;
         padding: 0;
@@ -56,12 +56,14 @@
       }
 
       .noise {
-        display: none !important;
+        width: 0;
+        height: 0;
       }
       .Block_description {
-        display: none !important;
+        width: 0;
+        height: 0;
       }
-   
+    }
   </style>
 </head>
 
