--- a/public/tv.html
+++ b/public/tv.html
@@ -16,52 +16,14 @@
   <link rel="stylesheet" href="tv.css">
   <style>
     @media print {
-      html, body {
-        margin: 0;
-        padding: 0;
-        width: auto;
-        height: auto;
-        overflow: hidden;
-      }
-      body * {
-        display: none !important;
-      }
       #btn_print {
         display: none;
       }
-      .TV-container {
-        display: none;
-      }
-      .lyrics {
-        display: none;
-      }
-      #targetArea, #targetArea * {
-        display: block !important;
-        visibility: visible !important;
-      }
-      .ARENA-container {
-        top: 0;
-        left: 0;
-        transform: translate(0, 0);
-        width: 100%;
-        height: auto;
-        background-image: none;
-      }
-      #targetArea {
-        position: static !important;
-        margin: 0 auto;
-        width: 100%;
-        max-width: 384px;
-        overflow: hidden;
-      }
-
       .noise {
-        width: 0;
-        height: 0;
+        display: none;
       }
       .Block_description {
-        width: 0;
-        height: 0;
+        display: none;
       }
     }
   </style>
@@ -72,7 +34,7 @@
   <!-- ======================================================= -->
   <!-- TV: Container -->
   <!-- ======================================================= -->
-  <div class="TV-container">
+  <!-- <div class="TV-container">
     <img class="TV-skin" src="img_tv/skin_y.png">
 
     <div id="playInfo">Press the <span style="color: yellow;">☀︎</span> button to play Sunlight TV</div>
@@ -82,22 +44,26 @@
       <button id="btn-P" disabled><</button>
       <div class="btn-pages"></div>
       <button id="btn-N">></button>
-      <!-- <button onclick="SET_mono()">mono</button> -->
     </div>
 
     <input type="text" id="TV-slug" placeholder=": your public Are.na URL here">
-    <!-- <div id="TV-slug">your public Are.na URL here</div> -->
-  </div>
+  </div> -->
 
-  <div id="lyrics"></div>
+  <div id="lyrics" style="display: none;"></div>
   <audio id="lalaland" src="sound/lalaland_lyrics.mp3" style="position: absolute; bottom: 0; left: 0; z-index: 2;"></audio>
 
+  
 
   <!-- ======================================================= -->
   <!-- API -->
   <!-- ======================================================= -->
   <div id="targetArea" class="ARENA-container">
     <input type="text">
+    <div class="TV-btns">
+      <button id="btn-P" disabled><</button>
+      <div class="btn-pages"></div>
+      <button id="btn-N">></button>
+    </div>
   </div>
 
 
@@ -108,6 +74,12 @@
 
   <script>
     function printTarget() {
+      // 스크롤 제거
+      document.body.style.overflow = 'hidden';
+      document.documentElement.style.overflow = 'hidden';
+      window.scrollTo(0, 0);
+
+      // 프린트 실행
       window.print();
     }
   </script>
