--- a/public/tv.html
+++ b/public/tv.html
@@ -16,8 +16,8 @@
   <link rel="stylesheet" href="tv.css">
   <style>
     #targetArea {
-      width: 384px;
-      height: 217px;
+      width: 100%;
+      height: auto;
     }
 
     #printWrapper {
