--- a/public/tv.html
+++ b/public/tv.html
@@ -24,6 +24,13 @@
       display: none;
     }
 
+    #btn_print {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 10;
+    }
+
     @media print {
       #btn_print {
         display: none;
